backend/err.txt
cargo :     Checking backend v0.1.0 
(C:\Users\Harshwardhan Dhoble\Desktop\wi\S58-0226-Omega-A
ngular-Rust-CampusHire\backend)
At line:1 char:1
+ cargo check 2>&1 | out-file -encoding utf8 err.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checkin 
   g ba...usHire\backend):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0308]: mismatched types
   --> src\main.rs:131:60
    |
 64 | #[get("/api/status")]
    | --------------------- unit struct defined here
...
131 |                 .map(|(id, job_id, job_title, 
job_company, status, applied_at)| StudentApplication {
    |                       
-------------------------------------^^^^^^-------------
    |                       |                            
        |
    |                       |                            
        expected `String`, found `status`
    |                       |                            
        `status` is interpreted as a unit struct, not a 
new binding
    |                       |                            
        help: introduce a new binding instead: 
`other_status`
    |                       expected due to this

error[E0308]: mismatched types
   --> src\main.rs:136:21
    |
136 |                     status,
    |                     ^^^^^^ expected `String`, 
found `status`

For more information about this error, try `rustc 
--explain E0308`.
error: could not compile `backend` (bin "backend") due 
to 2 previous errors
